--- a/WpfApp2/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2/WpfApp2.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>Patient_registration.xaml</DependentUpon>
     </Compile>
     <Compile Include="SQL_queries.cs" />
+    <Compile Include="Staff.cs" />
     <Compile Include="staff_individual.xaml.cs">
       <DependentUpon>staff_individual.xaml</DependentUpon>
     </Compile>
