Parameterized queries and moved them appropriately

--- a/WpfApp2/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2/WpfApp2.csproj
@@ -87,6 +87,7 @@
     <Compile Include="individual patient.xaml.cs">
       <DependentUpon>individual patient.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Login.cs" />
     <Compile Include="login.xaml.cs">
       <DependentUpon>login.xaml</DependentUpon>
     </Compile>
